--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
   </header>
  <!-- We are different section -->
+  <main>
   <section class="section" id="different">
     <!-- section-title -->
     <div class="section__title">
@@ -122,6 +123,7 @@
       </div>
     </div>
     </section>
+    </main>
     <!-- Footer section -->
     <footer class="footer">
       <div class="footer-top">
